--- a/main.css
+++ b/main.css
@@ -2,15 +2,17 @@ body {
     margin: 0px;
     padding: 0px;
     overflow:hidden;
+    
 }
 
 canvas#gl-canvas {
-    background: blue;
+    
     width: 100%;
     height: 100%;
     float: left;
     display: block;
     margin-right:5px;
+    background-image: url("cc.jpg");
 }
 
 div#debug{
